# stas-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release-please.yml
src/stas_server/: __init__.py  config.py  fringe_list_util.py  server.py  translation.py  util.py
stas_server/: __init__.py  config.py  process.py  server.py  translation.py  util.py
