[project]
name = "stas-server"
version = "0.24.0"
description = "Alternative standalone server for Sugoi Translator."
authors = [
    { name = "Muhd. Danial Danish Roslan", email = "distantwaterstream@gmail.com" }
]
dependencies = [
    "bottle>=0.12.25",
    "ctranslate2>=4.2.1",
    "sentencepiece>=0.2.0",
    "click>=8.1.7",
    "regex>=2024.4.28",
    "tornado>=6.4.1",
    "pyicu>=2.15",
]
readme = "README.md"
requires-python = ">= 3.12, < 3.14"
license = { text = "MIT" }

[project.scripts]
"stas-server" = "stas_server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[[tool.uv.index]]
url = "https://mddanish00.github.io/python-index/simple"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stas_server"]
