[project]
name = "stas-server"
version = "0.26.0"
description = "Alternative standalone server for Sugoi Translator."
authors = [
    { name = "Muhd. Danial Danish Roslan", email = "distantwaterstream@gmail.com" }
]
dependencies = [
    "ctranslate2>=4.2.1",
    "sentencepiece>=0.2.0",
    "regex>=2024.4.28",
    "pyicu>=2.15",
    "aiohttp>=3.12.15",
    "aiocache>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.12, < 3.15"
license = { text = "MIT" }

[project.scripts]
"stas-server" = "stas_server:cli"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://mddanish00.github.io/python-index/simple"
